# supersurf-billing-phase0

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPENDENCIES.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.caddy.yaml  compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-sandbox.yml
audit/: admin.py  apps.py  logging.py  middleware.py  models.py  service.py  signals.py  views.py
billing/: __init__.py  admin.py  apps.py  forms.py  models.py  money.py  mpesa_callbacks.py  services.py  urls.py  views.py
core/: admin.py  apps.py  context_processors.py  defaults.py  forms.py  models.py  services.py  tasks.py  views.py
deploy/: Caddyfile
docs/: phase-0-report.md
scripts/: scan_secrets.py
spikes/: README.md
subscribers/: admin.py  apps.py  forms.py  models.py  phone.py  services.py  urls.py  views.py
supersurf/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html
tests/: conftest.py  test_auth_and_browser.py  test_core_foundation.py  test_phase_1_1_security.py  test_phase_2_package_catalog.py  test_phase_3_subscriber_registry.py  test_phase_4_package_assignments.py  test_phase_5_billing_periods.py  test_phase_6_wallet_ledger.py  test_phase_7_wallet_funded_renewals.py  test_phase_8_1_sandbox_deployment.py  test_phase_8_payment_foundation.py  test_phase_9_1_sandbox_paybill_adapter.py  test_phase_9_mpesa_callbacks.py  test_roles_and_audit.py
users/: admin.py  apps.py  forms.py  models.py  roles.py  services.py  views.py
(+115 files in other folders)
